# aiopyvuebot

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  README.md  config.py  index.html  main.py  package-lock.json  package.json  project-structure.txt  pyproject.toml  pyvuebot.json  requirements.txt  sample.env  vercel.json  vite.config.js
NoteBot/: __init__.py  __main__.py
NoteBot/core/: __init__.py  bot.py  mongo.py
NoteBot/utils/: __init__.py  logger.py
aiopyvuebot/: __init__.py
aiopyvuebot/cli/: main.py
aiopyvuebot/cli/commands/: project.py  webhook.py
aiopyvuebot/core/: __init__.py  project.py  template.py  webhook.py  wizard.py
aiopyvuebot/templates/notebot/: .gitignore  config.py  index.html  main.py  package.json  pyvuebot.json  sample.env  vite.config.js
aiopyvuebot/templates/notebot/api/middleware/: auth.py
aiopyvuebot/templates/notebot/bot/: __main__.py
aiopyvuebot/templates/notebot/bot/core/: bot.py  mongo.py
aiopyvuebot/templates/notebot/src/: App.vue
aiopyvuebot/templates/notebot/strings/: helpers.py
api/: db.py  index.py  models.py
api/routes/: notes.py  telegram.py
bot/: __init__.py
bot/core/: __init__.py
bot/plugins/bot/: inline.py
bot/plugins/notes/: add.py  delete.py  list.py  search.py  view.py
bot/utils/: __init__.py  formatters.py
bot/utils/database/: notes.py  users.py
bot/utils/decorators/: __init__.py
src/: App.vue  style.css
src/components/: BotInfo.vue  NoteCard.vue  NoteList.vue
src/services/: telegramService.js
src/store/: notes.js
strings/: __init__.py
strings/langs/: en.yml
(+12 files in other folders)
