[tool.poetry]
name = "aiopyvuebot"
version = "2.0.0"
description = "CLI StarterKit for Telegram Mini Apps – aiogram 3 + MongoDB + Vue 3"
authors = ["Gemechis Chala <venopyx@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/gemechisdev/aiopyvuebot"
repository = "https://github.com/gemechisdev/aiopyvuebot"
keywords = ["telegram", "miniapp", "aiogram", "mongodb", "vue", "fastapi", "starterkit"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Communications :: Chat",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Framework :: FastAPI",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
click = ">=8.0.0,<9.0.0"
requests = ">=2.32.3,<3.0.0"

[tool.poetry.scripts]
aiopyvuebot = "aiopyvuebot.cli.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
